fix: no index for privacy, refund and terms of service, text align footer li

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -28,6 +28,8 @@ footer {
     }
 
     li {
+      text-align: center;
+
       a {
         &:hover {
           font-weight: bold;
